--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,18 +11,22 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+      time: "22:29"
 
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "daily"
+      time: "22:29"
 
   - package-ecosystem: "npm"
     directory: "smooth-doc"
     schedule:
       interval: "daily"
+      time: "22:29"
 
   - package-ecosystem: "npm"
     directory: "website"
     schedule:
       interval: "weekly"
+      time: "22:29"
