--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,9 @@
 name: Checks
 on:
   push:
-    # branches:
-    #   - main
+    branches:
+      - main
   pull_request:
-    paths:
 
 jobs:
   check:
