--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,23 +10,10 @@ updates:
     # default location of `.github/workflows`
     directory: "/"
     schedule:
-      interval: "daily"
-      time: "22:29"
+      interval: "weekly"
 
   - package-ecosystem: "npm"
     directory: "/"
-    schedule:
-      interval: "daily"
-      time: "22:29"
-
-  - package-ecosystem: "npm"
-    directory: "smooth-doc"
-    schedule:
-      interval: "daily"
-      time: "22:29"
-
-  - package-ecosystem: "npm"
-    directory: "website"
     schedule:
       interval: "weekly"
       time: "22:29"
